force-app/main/default/objects/Academic_Record__c/Academic_Record__c.object-meta.xml
<CustomObject>
    <label>Academic Record</label>
    <nameField>
        <label>Academic Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Academic Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>