force-app/main/default/objects/Academic_Record__c/fields/Academic_Level__c.field-meta.xml
<CustomField>
    <fullName>Academic_Level__c</fullName>
    <label>Academic Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Diploma</fullName>
            </value>
            <value>
                <fullName>Undergraduate</fullName>
            </value>
            <value>
                <fullName>Honours</fullName>
            </value>
            <value>
                <fullName>Masters</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>