force-app/main/default/objects/Academic_Record__c/fields/Graduation_Status__c.field-meta.xml
<CustomField>
    <fullName>Graduation_Status__c</fullName>
    <label>Graduation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Graduated</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Dropped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>