force-app/main/default/objects/Academic_Record__c/fields/Major__c.field-meta.xml
<CustomField>
    <fullName>Major__c</fullName>
    <label>Major</label>
    <length>255</length>
    <type>Text</type>
</CustomField>