force-app/main/default/objects/Academic_Record__c/fields/Modules__c.field-meta.xml
<CustomField>
    <fullName>Modules__c</fullName>
    <label>Modules</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>