force-app/main/default/objects/Academic_Record__c/fields/Second_Year_Average__c.field-meta.xml
<CustomField>
    <fullName>Second_Year_Average__c</fullName>
    <label>Second Year Average</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>