force-app/main/default/objects/Academic_Record__c/fields/Third_Year_Average__c.field-meta.xml
<CustomField>
    <fullName>Third_Year_Average__c</fullName>
    <label>Third Year Average</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>